logs/codefights.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/codefights'...
Listing './lib/python3.5/site-packages/codefights/boilerplate'...
Compiling './lib/python3.5/site-packages/codefights/boilerplate/Commentator.py'...
***   File "./lib/python3.5/site-packages/codefights/boilerplate/Commentator.py", line 24
    print '%s vs %s: %s to %s' % (
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/codefights/boilerplate/Human.py'...
***   File "./lib/python3.5/site-packages/codefights/boilerplate/Human.py", line 19
    except ProtocolException, msg:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/codefights/boilerplate/SDK.py'...
***   File "./lib/python3.5/site-packages/codefights/boilerplate/SDK.py", line 65
    print 'unrecognized option(s): '
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/codefights/boilerplate/server'...
Compiling './lib/python3.5/site-packages/codefights/boilerplate/server/Protocol.py'...
***   File "./lib/python3.5/site-packages/codefights/boilerplate/server/Protocol.py", line 91
    breaks = ur'\t|\n|"'
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/codefights/model'...
Listing './lib/python3.5/site-packages/codefights/samples'...
Listing './lib/python3.5/site-packages/codefights-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
